--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gate-addon-sensortag",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,12 @@
   "homepage": "https://github.com/Instathings/gate-addon-sensortag#readme",
   "dependencies": {
     "debug": "^4.1.1",
+    "lodash": "^4.17.15",
     "sensortag": "^1.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.0"
   }
 }
