--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gate-addon-sensortag",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,7 @@
   "dependencies": {
     "debug": "^4.1.1",
     "lodash": "^4.17.15",
-    "sensortag": "^1.3.0"
+    "@instathings/sensortag": "^1.3.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
